--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,6 +1,4 @@
 title: Sample Test Title
 description: Sample Description
-comments: Sample Comment2
-recepient_type: testtemplates
-issue_id_list:
- - fbm3307/testtemplates : https://github.com/fbm3307/testtemplates/issues/21
+comments: Sample Comment 1
+recepient_type: testimagestreams
