--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,3 +1,4 @@
 title: Sample Test Title
-description: Sample Description
+description: Sample Description 1
 recepient_type: testtemplates
+operation: create_issues
