--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,5 +1,4 @@
 title: Sample Test Title
-description: Sample Description 5
-recepient_type: testtemplates
+description: Sample Description 6
+recepient_type: testall
 operation: create_issues
-msg-id: 1673418935
