--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,5 +1,4 @@
 title: Sample Test Title
-description: Sample Description 6
-recepient_type: testall
+description: Sample Description 7
+recepient_type: testimagestreams
 operation: create_issues
-msg-id: 1673420425
