--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,4 +1,4 @@
 title: Sample Test Title
-description: Sample Description 8
-recepient_type: testimagestreams
+description: Sample Description 9
+recepient_type: testtemplates
 operation: create_issues
