appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -1,4 +1,6 @@
-msg-id: 1673506454
-    -testimagestreams
-        -https://github.com/fbm3307/test-learn/issues/19
-        -https://github.com/fbm3307/testimagestreams1/issues/14
+msg-id: 1673850139
+    -testtemplates
+        -https://github.com/fbm3307/testtemplates/issues/26
+msg-id: 1673850139
+    -testtemplates
+        -https://github.com/fbm3307/testtemplates/issues/26
