--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -2,3 +2,4 @@ title: Sample Test Title
 description: Sample Description 9
 recepient_type: testtemplates
 operation: create_issues
+msg-id: 1673850139
