--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -1,6 +1,3 @@
 msg-id: 1673850139
-    -testtemplates
-        -https://github.com/fbm3307/testtemplates/issues/26
-msg-id: 1673850139
-    -testtemplates
+    testtemplates
         -https://github.com/fbm3307/testtemplates/issues/26
