--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,4 +1,4 @@
 title: Sample Test Title
-description: Sample Description 17
-recepient_type: testtemplates
+description: Sample Description 18
+recepient_type: testimagestreams
 operation: create_issues
