--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -2,3 +2,4 @@ title: Sample Test Title
 description: Sample Description 20
 recepient_type: testimagestreams
 operation: create_issues
+msg-id: 1673860296
