--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,5 +1,5 @@
 title: Sample Test Title
-description: Sample Description 20
-recepient_type: testimagestreams
+description: Sample Description 21
+recepient_type: testtemplates
 operation: create_issues
 msg-id: 1673860296
