--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -1,4 +1,3 @@
 1673860296:
- testimagestreams:
-  - https://github.com/fbm3307/test-learn/issues/23
-  - https://github.com/fbm3307/testimagestreams1/issues/18
+ testtemplates:
+  - https://github.com/fbm3307/testtemplates/issues/34
