--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,5 +1,5 @@
 title: Sample Test Title
 description: Sample Description 22
-recepient_type: testtemplates
+recepient_type: testimagestreams
 operation: create_issues
 msg-id: 1673860296
