--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -1,3 +1,6 @@
 1673860296:
  testtemplates:
   - https://github.com/fbm3307/testtemplates/issues/34
+ testimagestreams:
+  - ['https://github.com/fbm3307/test-learn/issues/24', 'https://github.com/fbm3307/testimagestreams1/issues/19']
+  - ['https://github.com/fbm3307/test-learn/issues/25', 'https://github.com/fbm3307/testimagestreams1/issues/20']
