--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -2,5 +2,5 @@ title: Sample Test Title
 description: Sample Description 24
 recepient_type: testimagestreams
 operation: comment
-comment: Sample Comment
+comment: Sample Comment 1
 msg-id: 1673860296
