appending issue ids [skip actions]

--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -3,3 +3,4 @@ description: This is testing of automation workflow.
 recepient_type: testall
 operation: create_issues
 comment: Sample Comment 1
+msg-id: 1674018269
