appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -4,3 +4,9 @@
  testimagestreams:
   - https://github.com/fbm3307/test-learn/issues/26
   - https://github.com/fbm3307/testimagestreams1/issues/21
+1674018269:
+ testtemplates:
+  - https://github.com/fbm3307/testtemplates/issues/35
+ testimagestreams:
+  - https://github.com/fbm3307/test-learn/issues/27
+  - https://github.com/fbm3307/testimagestreams1/issues/22
