--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,3 +1,3 @@
 title: Testing automation workflow
-description: This is testing of automation workflow.
+description: This is testing of automation workflow1.
 recepient_type: testimagestreams
