--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,4 +1,3 @@
 title: Testing automation workflow
 description: This is testing of automation workflow1.
-recepient_type: testimagestreams
-msg-id: 1674063580
+recepient_type: testall
