appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -2,3 +2,8 @@
  testimagestreams:
   - https://github.com/fbm3307/test-learn/issues/36
   - https://github.com/fbm3307/testimagestreams1/issues/31
+1674063725:
+ testall:
+  - https://github.com/fbm3307/test-learn/issues/37
+  - https://github.com/fbm3307/testimagestreams1/issues/32
+  - https://github.com/fbm3307/testtemplates/issues/38
