--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -2,3 +2,4 @@ title: Testing automation workflow
 description: This is testing of automation workflow1.
 recepient_type: testall
 msg-id: 1674063725
+comment: Sample Comment
