appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -7,3 +7,5 @@
   - https://github.com/fbm3307/test-learn/issues/37
   - https://github.com/fbm3307/testimagestreams1/issues/32
   - https://github.com/fbm3307/testtemplates/issues/38
+ comment:
+  - Sample Comment
