appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -9,3 +9,4 @@
   - https://github.com/fbm3307/testtemplates/issues/38
  comment:
   - Sample Comment
+  - This comment is for testing purpose. Please ignore.
