--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -3,3 +3,4 @@ description: This is testing of automation workflow1.
 recepient_type: testall
 msg-id: 1674063725
 comment: This comment is for testing purpose. Please ignore.
+close: true
