--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,3 +1,4 @@
 title: Testing automation workflow
 description: This is testing of automation workflow2.
 recepient_type: testall
+msg-id: 1674067129
