appending issue ids [skip actions]

--- a/state/state-msg.yml
+++ b/state/state-msg.yml
@@ -11,3 +11,8 @@
   - Sample Comment
   - This comment is for testing purpose. Please ignore.
   - Issue closed.
+1674067444:
+ testall:
+  - https://github.com/fbm3307/test-learn/issues/38
+  - https://github.com/fbm3307/testimagestreams1/issues/33
+  - https://github.com/fbm3307/testtemplates/issues/39
