--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -1,4 +1,3 @@
 title: Testing automation workflow
 description: This is testing of automation workflow3.
-recepient_type: testall
-msg-id: 1674067444
+recepient_type: testimagestreams
