--- a/message/sample-msg.yml
+++ b/message/sample-msg.yml
@@ -2,3 +2,5 @@ title: Testing automation workflow
 description: This is testing of automation workflow3.
 recepient_type: testimagestreams
 msg-id: 1674144915
+comment:
+ - This is sample comment.
